src/objects/HPP_extended_opportunity__c.object
<CustomObject>
    <fields>
        <fullName>Abandoned_Date__c</fullName>
        <label>Abandoned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Abandoned_reason__c</fullName>
        <label>End of application notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Landline__c</fullName>
        <description>For use with valuation</description>
        <label>Access Landline</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Account_Conduct__c</fullName>
        <formula>TEXT(Opportunity__r.Account_with_IBB__r.Account_Conduct__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Conduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Received_1st__c</fullName>
        <label>Additional Info Received 1st</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Received_2nd__c</fullName>
        <label>Additional Info Received 2nd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Requested_1st__c</fullName>
        <label>Additional Info Requested 1st</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Info_Requested_2nd__c</fullName>
        <label>Additional Info Requested 2nd</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AdminFeeReceived__c</fullName>
        <label>Admin Fee Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdminFeeValue__c</fullName>
        <label>AdminFeeValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Admin_Fee_AJE_Full__c</fullName>
        <label>Admin Fee AJE Full</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AJE Success</fullName>
                </value>
                <value>
                    <fullName>AJE Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fee_AJE__c</fullName>
        <label>Admin Fee AJE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AJE Success</fullName>
                </value>
                <value>
                    <fullName>AJE Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_Fee_Received_Full__c</fullName>
        <label>Admin Fee Received Full</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admin_fee_full_received__c</fullName>
        <label>Admin fee full received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_to_Solicitors__c</fullName>
        <label>Advance to Solicitors</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advised_Sale__c</fullName>
        <defaultValue>&quot;Y&quot;</defaultValue>
        <description>For use with FSA return</description>
        <label>Advised Sale</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AffordabilityResult__c</fullName>
        <label>AffordabilityResult</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affordability_Percentage__c</fullName>
        <label>Affordability Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Al_Rayan_Valuation_Contribution__c</fullName>
        <formula>IF( Valuation_table_price__c &lt;  Opportunity__r.IBB_Product__r.Valuation_Contribution_Amount__c ,Valuation_table_price__c, Opportunity__r.IBB_Product__r.Valuation_Contribution_Amount__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Al Rayan Valuation Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_customer_documents_recieved__c</fullName>
        <description>For use in Martineau Integration</description>
        <label>All customer documents received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_completion_of_ROT__c</fullName>
        <label>Anticipated completion of ROT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>App_received_to_valuation_instructed__c</fullName>
        <formula>Valuation_instructed__c  - Opportunity__r.Ready_for_credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App received to valuation instructed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_form_signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application form signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_to_Credit__c</fullName>
        <formula>CASE(MOD(DATEVALUE(Opportunity__r.Received_by_credit__c) - DATE(1985,6,24),7), 
0 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , 
CASE( MOD( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999 
) 
+ 
(FLOOR(( DATEVALUE(Opportunity__r.Received_by_credit__c)  - Opportunity__r.Original_application_completed_date__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application to Credit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApproverName1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApproverName1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproverName2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApproverName2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApproverName3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApproverName3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_extended_opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <label>Archived</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Are_you_buying_from_a_family_member__c</fullName>
        <label>Are you buying from a family member?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorised_to_offer_sent__c</fullName>
        <formula>Offer_letter_sent__c  -  Latest_Post_Val_Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorised to offer sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Condition_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Condition Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bankruptcy_search_in_date__c</fullName>
        <label>Bankruptcy search in date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bankruptcy_search_in_date_comments__c</fullName>
        <label>Bankruptcy search in date comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BudgetPlannerResult__c</fullName>
        <label>BudgetPlannerResult</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Figures__c</fullName>
        <label>Budget Figures</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single App</fullName>
                </value>
                <value>
                    <fullName>Joint App</fullName>
                </value>
                <value>
                    <fullName>Joint App + 1 dependent</fullName>
                </value>
                <value>
                    <fullName>Joint App + 2 dependent</fullName>
                </value>
                <value>
                    <fullName>Joint App 3 or more dependents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_insurance_value__c</fullName>
        <label>Building insurance value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Building_reinstatement_value__c</fullName>
        <description>For use with credit risk reporting. To pull through this value from the valuation report object.</description>
        <label>Building reinstatement value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buildings_insurance__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Buildings insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_abandoned__c</fullName>
        <label>End of application date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chancel_search_and_insurance__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Chancel search and insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clause_3_4_expiry__c</fullName>
        <formula>TODAY() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clause 3.4 expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clause_3_4_last_date__c</fullName>
        <formula>TODAY() + 120</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clause 3.4 last date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CommentsApprover1__c</fullName>
        <label>CommentsApprover1</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsApprover2__c</fullName>
        <label>CommentsApprover2</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsApprover3__c</fullName>
        <label>CommentsApprover3</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_for_re_issue__c</fullName>
        <description>C00203</description>
        <label>Comments for re issue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comp_Prope_Infor_Additional_Prop_Form__c</fullName>
        <description>Completed Property Information Form and Additional Property Form
For Use within Martineau Intergration</description>
        <label>Comp Prope Infor &amp;  Additional Prop Form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_Undertaking__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Completion Undertaking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completion_date__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Completion date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_check_completed__c</fullName>
        <inlineHelpText>For use with Compliance Observations</inlineHelpText>
        <label>Compliance check done</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Advice check</fullName>
                </value>
                <value>
                    <fullName>Full File check</fullName>
                </value>
                <value>
                    <fullName>Live/Rec check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_check_date__c</fullName>
        <label>Compliance check date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmation_of_orig_signed_offer_doc_s__c</fullName>
        <description>Confirmation of original signed offer documents received</description>
        <label>Confirmation of orig signed offer doc&apos;s</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Type_Roof__c</fullName>
        <label>Construction type roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Slate</fullName>
                </value>
                <value>
                    <fullName>Tile</fullName>
                </value>
                <value>
                    <fullName>Thatch</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_type_walls__c</fullName>
        <label>Construction type walls</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brick</fullName>
                </value>
                <value>
                    <fullName>Stone</fullName>
                </value>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Timber</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Results__c</fullName>
        <label>Credit Results</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_FTV__c</fullName>
        <formula>-HPP_Live_Balance__c/ Opportunity__r.Purchase_price_market_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted_Last__c</fullName>
        <label>Customer Contacted Last</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Completion_date__c</fullName>
        <description>Created on 17/09 12.00 for Nathan regarding improving tracking of completions.</description>
        <label>Customer Requested Completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_updates__c</fullName>
        <label>Customer updates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DDPreferredPaymentDate__c</fullName>
        <label>Preferred payment day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateApprover1__c</fullName>
        <label>DateApprover1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateApprover2__c</fullName>
        <label>DateApprover2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateApprover3__c</fullName>
        <label>DateApprover3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Assessed__c</fullName>
        <label>Date Application Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Received__c</fullName>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Redeemed__c</fullName>
        <label>Date Redeemed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_abandonment_letter_sent__c</fullName>
        <label>Date end of application letter sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_admin_fee_paid__c</fullName>
        <description>For use with credit risk reporting</description>
        <label>Date admin fee paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_funds_sent__c</fullName>
        <label>Date funds sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_completion__c</fullName>
        <label>Date of completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_valuation_report__c</fullName>
        <description>For use with CPF opportunities</description>
        <label>Date of valuation report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_release_funds_to_solicitor__c</fullName>
        <label>Date to release funds to solicitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_to_send_funds_to_solicitor__c</fullName>
        <formula>Requested_Completion_Date__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date to send funds to solicitor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_valuation_booked__c</fullName>
        <label>Date valuation booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_valuation_fee_paid__c</fullName>
        <label>Date valuation fee paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOfferToCompletion__c</fullName>
        <formula>abs( Actual_Completion_Date__c - Original_Offer_Sent_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DaysOfferToCompletion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_App_Received__c</fullName>
        <formula>IF(ISBLANK(Date_Application_Assessed__c), 


CASE(MOD( (Date_Application_Received__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - (Date_Application_Received__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - (Date_Application_Received__c) )/7)*5)-1 ,

CASE(MOD((Date_Application_Received__c) - DATE(1985,6,24),7), 
0 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( Date_Application_Assessed__c - (Date_Application_Received__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( Date_Application_Assessed__c - (Date_Application_Received__c) )/7)*5)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since App Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Offer_Letter_Sent__c</fullName>
        <formula>(TODAY()- Offer_letter_sent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Offer Letter Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Valuation_Received__c</fullName>
        <formula>IF(ISBLANK(Valuation_received__c) , today() - Valuation_instructed__c , Valuation_received__c - Valuation_instructed__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Valuation Instructed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Valuation_Recieved__c</fullName>
        <formula>IF(ISBLANK(Valuation_received__c) , 0 , today() -Valuation_received__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Valuation Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_credit_to_Offer__c</fullName>
        <formula>CASE(MOD(DATEVALUE(Opportunity__r.Received_by_credit__c) - DATE(1985,6,24),7), 
0 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , 
CASE( MOD( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999
) 
+ 
(FLOOR(( Original_Offer_Sent_Date__c - DATEVALUE(Opportunity__r.Received_by_credit__c) )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days credit to Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_further_information__c</fullName>
        <formula>today()- Pre_Val_1_Date__c</formula>
        <label>Days in further information</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_until_offer_letter_expires__c</fullName>
        <description>For use with the triggering of offer letter expiry customer emails</description>
        <formula>Offer_letter_expiry_date__c - TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days until offer letter expires</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_to_Offer_time__c</fullName>
        <formula>Last_offer_issued_date__c- Latest_Post_Val_Decision_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision to Offer time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Differencecustomer_solicitorcompletion__c</fullName>
        <formula>Floor( Requested_Completion_Date__c  -  Customer_Requested_Completion_date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Differencecustomer/solicitorcompletion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diminishing_Musharakah_Agreement__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Diminishing Musharakah Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disclosable_Interests_Questionnaire__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Disclosable Interests Questionnaire</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documents_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailAddressHPPCAAComms__c</fullName>
        <description>Email address populated by workflow to show email address for customer communication.</description>
        <label>EmailAddressHPPCAAComms</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employment_Sector__c</fullName>
        <formula>text(Opportunity__r.Account.Nature_of_Employers_Your_Business__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employment Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <formula>Actual_Completion_Date__c + ( ( 365 / 12 ) *  (Opportunity__r.Term_of_Finance__c * 12) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Environmental_search__c</fullName>
        <description>For Use within Martineau Intergration</description>
        <label>Environmental search</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                    <default>true</default>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>Not Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estate_agent_company_name__c</fullName>
        <label>Estate agent company name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estate_agent_contact_name__c</fullName>
        <label>Access Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estate_agent_contact_telephone_number__c</fullName>
        <label>Access contact telephone number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Estimated_completion_date__c</fullName>
        <label>Estimated completion date</label>
        <type>Date</type>
    </fields>
</CustomObject>